--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                 </header>
 
                 <div class="cards grid">
-                    <div class="card">
+                    <div class="card1">
                         <i class="icon-mobile2"> </i>
                         <h3>
                             UI-UX Design
@@ -169,7 +169,7 @@
                         <p>Criaçao de interfaces mobiles e descktop</p>
 
                     </div>
-                    <div class="card">
+                    <div class="card2">
                         <i class="icon-mobile2"> </i>
                         <h3>
                             Criação de Apps
@@ -179,7 +179,7 @@
                         </p>
 
                     </div>
-                    <div class="card">
+                    <div class="card3">
                         <i class="icon-embed2">     </i>
                         <h3>
                             Criação de Websites
@@ -203,7 +203,7 @@
                 </header>
 
                 <div class="cards grid">
-                    <div class="card">
+                    <div class="card1">
 
                         <h3>
                             Chinafood Projecto Mobile UI/UX design
@@ -224,7 +224,7 @@
                     </div>
                       
                     </div>
-                    <div class="card">
+                    <div class="card2">
 
                         <h3>
                             Frases App
@@ -243,7 +243,7 @@
                     </div>
 
 
-                    <div class="card">
+                    <div class="card3">
 
                         <h3>
                             Em Breve
